--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-15 [美国务院发言人：美“绝对支持”并将继续推动台湾参与世卫大会](/articles/voa/1040785.md)
+
+5-15 [斯特凡尼克当选众院共和党领导职务 特朗普巩固党内地位](/articles/voa/1040786.md)
+
 5-15 [因疫情而关闭的华盛顿史密森尼博物馆群开始重新对公众开放](/articles/voa/1040787.md)
 
 5-15 [风电场还是“特洛伊木马”？中国对美基础设施投资再遇阻](/articles/voa/1040788.md)
@@ -596,8 +600,4 @@
 5-3 [伊朗最高领袖说伊朗外长在音频泄漏中的言论是“重大错误”](/articles/voa/1041083.md)
 
 5-3 [美国否认与伊朗达成人质交易](/articles/voa/1041084.md)
-
-5-3 [中共政法委官微发帖讥讽印度疫情，网友愤怒](/articles/voa/1041085.md)
-
-5-3 [印度继续遭受新冠病毒大流行的重创 只有2%的人口接种了新冠疫苗](/articles/voa/1041086.md)
 
