--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+5-15 [世卫：在疫情高传染区 已接种疫苗者仍须戴口罩 – 法国国际广播电台 - RFI](/articles/rfi/1029855.md)
+
 5-15 [杜特尔特：联合国无用，菲律宾在南海问题上寸步不让](/articles/rfi/1029856.md)
 
 5-15 [申请联邦资金隐瞒参加千人计划 美免疫学专家被判入狱37个月](/articles/rfi/1029857.md)
@@ -598,6 +600,4 @@
 5-10 [遭控6罪名 翁山苏姬24日首次亲自出庭受审 – 法国国际广播电台 - RFI](/articles/rfi/1030153.md)
 
 5-10 [巴西总统带领支持者骑机车游行 称抗疫渐取得胜利 – 法国国际广播电台 - RFI](/articles/rfi/1030154.md)
-
-5-10 [美东输油遭骇客攻击损毁严重仍未修好 拜登宣布紧急状态](/articles/rfi/1030155.md)
 
