--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+5-15 [中国称若美国政治打压中国记者将对等反制](/articles/voa/1040782.md)
+
+5-15 [中国虽担心通胀 但眼下还不算大事](/articles/voa/1040783.md)
+
+5-15 [美澳外长谈话后中国指责美国搞“胁迫外交”](/articles/voa/1040784.md)
+
 5-15 [美国务院发言人：美“绝对支持”并将继续推动台湾参与世卫大会](/articles/voa/1040785.md)
 
 5-15 [斯特凡尼克当选众院共和党领导职务 特朗普巩固党内地位](/articles/voa/1040786.md)
@@ -594,10 +600,4 @@
 5-3 [俄中在媒体宣传关键领域加强合作联手对抗西方](/articles/voa/1041080.md)
 
 5-3 [制度透明有效打假 台湾成新闻自由典范](/articles/voa/1041081.md)
-
-5-3 [新西兰总理说与中国的分歧越来越难以调和](/articles/voa/1041082.md)
-
-5-3 [伊朗最高领袖说伊朗外长在音频泄漏中的言论是“重大错误”](/articles/voa/1041083.md)
-
-5-3 [美国否认与伊朗达成人质交易](/articles/voa/1041084.md)
 
