--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-15 [【网络民议】你误会了！不止同性没床戏，异性也没有！](/articles/cdt/382547.md)
+
 5-15 [投石机 bump | 请停止对成都49中小林母亲的谩骂](/articles/cdt/382550.md)
 
 5-15 [知识分子｜学者研究揭秘：“一审不判离” 为何如此普遍](/articles/cdt/382557.md)
@@ -598,6 +600,4 @@
 4-12 [十分正经研究所｜纪念金德强君](/articles/cdt/383864.md)
 
 4-12 [【CDTV】央视批小猪佩奇、迪迦奥特曼等动漫含暴力危险镜头 B站网友怒了](/articles/cdt/383871.md)
-
-4-12 [追月数星｜为自由表达而写](/articles/cdt/383874.md)
 
