--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-15 [围炉 | 肖美丽事件 ：偏狭、荒诞、审查与流量狂欢](/articles/cdt/382537.md)
+
+5-15 [Matters | 港人流亡日记：家的距离](/articles/cdt/382543.md)
+
 5-15 [【网络民议】你误会了！不止同性没床戏，异性也没有！](/articles/cdt/382547.md)
 
 5-15 [投石机 bump | 请停止对成都49中小林母亲的谩骂](/articles/cdt/382550.md)
@@ -596,8 +600,4 @@
 4-12 [【404文库】枪稿｜春晚加满的，不只是你的购物车，还有怒气槽吧](/articles/cdt/383859.md)
 
 4-13 [【404文库】三联生活周刊｜周榕：“丑陋建筑”反映了过去十几年的时代精神](/articles/cdt/383862.md)
-
-4-12 [十分正经研究所｜纪念金德强君](/articles/cdt/383864.md)
-
-4-12 [【CDTV】央视批小猪佩奇、迪迦奥特曼等动漫含暴力危险镜头 B站网友怒了](/articles/cdt/383871.md)
 
