--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-15 [台陆委会：以国安法冻结私人资产加大香港商业风险](/articles/voa/1040779.md)
+
 5-15 [巴以冲突持续六天，目前尚无停战迹象](/articles/voa/1040780.md)
 
 5-15 [解放军频频军演恫吓台湾 未来作战手法或大幅改变](/articles/voa/1040781.md)
@@ -598,6 +600,4 @@
 5-3 [布林肯：北京对内压制对外嚣张导致美中关系陷入困境](/articles/voa/1041077.md)
 
 5-3 [国安法阴霾下香港新闻自由前景黯淡 网媒或成抗衡力量](/articles/voa/1041078.md)
-
-5-3 [世界新闻自由日：中国被评为新闻和言论自由的最大敌人](/articles/voa/1041079.md)
 
