--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-16 [【网络民议】豆瓣电影关闭影片IMDb条目超链接](/articles/cdt/382531.md)
+
 5-15 [立场新闻 | 香港《852邮报》宣布“暂别” 创办人游清源：拟立《假新闻法》是导火线](/articles/cdt/382534.md)
 
 5-15 [围炉 | 肖美丽事件 ：偏狭、荒诞、审查与流量狂欢](/articles/cdt/382537.md)
@@ -598,6 +600,4 @@
 4-12 [【404文库】枪稿｜我们都跪着，凭什么就你要站起来](/articles/cdt/383854.md)
 
 4-12 [【404文库】枪稿｜P大的事：从Y同学到B博士](/articles/cdt/383857.md)
-
-4-12 [【404文库】枪稿｜春晚加满的，不只是你的购物车，还有怒气槽吧](/articles/cdt/383859.md)
 
