--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-16 [【图说天朝】全国各地和尚尼姑学习党史 传承红色基因（附《求是》习近平“用好红色资源，传承好红色基因”合集）](/articles/cdt/382524.md)
+
 5-16 [【网络民议】豆瓣电影关闭影片IMDb条目超链接](/articles/cdt/382531.md)
 
 5-15 [立场新闻 | 香港《852邮报》宣布“暂别” 创办人游清源：拟立《假新闻法》是导火线](/articles/cdt/382534.md)
@@ -598,6 +600,4 @@
 4-12 [【404文库】枪稿｜金鸡金马：这么近，那么远](/articles/cdt/383836.md)
 
 4-12 [【404文库】枪稿｜我们都跪着，凭什么就你要站起来](/articles/cdt/383854.md)
-
-4-12 [【404文库】枪稿｜P大的事：从Y同学到B博士](/articles/cdt/383857.md)
 
