--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-16 [欧洲发生支持巴勒斯坦人游行](/articles/voa/1040774.md)
+
 5-16 [欧晓瑜：由纽约移民家庭的孩子成长为佐治亚州参议员](/articles/voa/1040775.md)
 
 5-16 [缅甸政府军与地方反政府武装爆发战斗](/articles/voa/1040776.md)
@@ -598,6 +600,4 @@
 5-3 [中国籍男子“畅通无阻”偷渡台湾 台国防部称海军海巡“确有缺失”](/articles/voa/1041072.md)
 
 5-3 [菲外长发推文抗议爆粗口 要中国滚出争议海域](/articles/voa/1041073.md)
-
-5-3 [澳大利亚据信正考虑收回中国公司对达尔文港99年租约](/articles/voa/1041074.md)
 
