--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -9,6 +9,8 @@
 
 5-15 [立场新闻 | 香港《852邮报》宣布“暂别” 创办人游清源：拟立《假新闻法》是导火线](/articles/cdt/382534.md)
 
+5-16 [光之祭 | 我究竟是不是一个女权主义者？](/articles/cdt/382535.md)
+
 5-15 [围炉 | 肖美丽事件 ：偏狭、荒诞、审查与流量狂欢](/articles/cdt/382537.md)
 
 5-15 [Matters | 港人流亡日记：家的距离](/articles/cdt/382543.md)
@@ -598,6 +600,4 @@
 4-12 [【404文库】枪稿｜WHO在删文](/articles/cdt/383834.md)
 
 4-12 [【404文库】枪稿｜金鸡金马：这么近，那么远](/articles/cdt/383836.md)
-
-4-12 [【404文库】枪稿｜我们都跪着，凭什么就你要站起来](/articles/cdt/383854.md)
 
