--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+5-17 [艺术品金融化的昙花再现？从邮币卡、文交所及鲍伊债券来探讨NFT的泡沫与机遇](/articles/ft/1045619.md)
+
 5-14 [阿里巴巴遭遇上市以来首个季度亏损](/articles/ft/1045620.md)
 
 5-14 [“苏独”背后：英国独立运动的历史渊源](/articles/ft/1045621.md)
@@ -598,6 +600,4 @@
 3-12 [中美产业链之战与体系性大国竞争的未来](/articles/ft/1045917.md)
 
 3-12 [FT社评：拜登刺激计划将影响全世界](/articles/ft/1045918.md)
-
-3-12 [为何哈里、梅根在王室公关战中能暂时领先？](/articles/ft/1045919.md)
 
