--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,16 @@
 美国之音
 ------
 
+5-17 [媒体要求以色列对摧毁新闻机构办公楼做出解释](/articles/voa/1040768.md)
+
+5-16 [印度恒河河岸发现大量尸体 官方否认与新冠病毒有关](/articles/voa/1040769.md)
+
+5-16 [美英谴责缅甸军政府暴力 教宗呼吁民众不要屈服于邪恶和分裂](/articles/voa/1040770.md)
+
+5-16 [印度敦促中国稳定新冠肺炎药物成分的价格](/articles/voa/1040771.md)
+
+5-16 [日美法军演着眼中国](/articles/voa/1040772.md)
+
 5-16 [拜登与以巴双方领导人通话，对地区冲突表示关切](/articles/voa/1040773.md)
 
 5-16 [欧洲发生支持巴勒斯坦人游行](/articles/voa/1040774.md)
@@ -590,14 +600,4 @@
 5-4 [时事大家谈: 美中对抗：大国争霸还是制度较量？](/articles/voa/1041066.md)
 
 5-4 [港版国安法损害香港新闻自由 香港记协年度新闻自由指数跌至8年新低](/articles/voa/1041067.md)
-
-5-4 [台积电称6月底前或能满足市场最低汽车芯片需求](/articles/voa/1041068.md)
-
-5-4 [印度疫情告急 每日感染病例超过30万起](/articles/voa/1041069.md)
-
-5-3 [中国疫苗何去何从？世卫组织或于未来几天内公布决定](/articles/voa/1041070.md)
-
-5-3 [七国集团本周举行两年来首次面对面部长级会议](/articles/voa/1041071.md)
-
-5-3 [中国籍男子“畅通无阻”偷渡台湾 台国防部称海军海巡“确有缺失”](/articles/voa/1041072.md)
 
