--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-17 [俄共被批已成中共党支部 俄政党攻讦开打中国牌](/articles/voa/1040767.md)
+
 5-17 [媒体要求以色列对摧毁新闻机构办公楼做出解释](/articles/voa/1040768.md)
 
 5-16 [印度恒河河岸发现大量尸体 官方否认与新冠病毒有关](/articles/voa/1040769.md)
@@ -598,6 +600,4 @@
 5-4 [香港支联会国安法下首次洗刷国殇之柱 冀以行动战胜恐惧延续六四烛光](/articles/voa/1041065.md)
 
 5-4 [时事大家谈: 美中对抗：大国争霸还是制度较量？](/articles/voa/1041066.md)
-
-5-4 [港版国安法损害香港新闻自由 香港记协年度新闻自由指数跌至8年新低](/articles/voa/1041067.md)
 
