--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+5-17 [加拿大:魁北克想要重申法语的位置](/articles/rfi/1029784.md)
+
 5-17 [智利“制宪会议”选举 首创男女成员数目相当](/articles/rfi/1029785.md)
 
 5-17 [日媒：欧洲加入离岛训练 制衡中国恐鞭长莫及](/articles/rfi/1029786.md)
@@ -598,6 +600,4 @@
 5-11 [报复哈玛斯 以色列空袭加萨击中130军事目标 – 法国国际广播电台 - RFI](/articles/rfi/1030082.md)
 
 5-11 [中国劳动力人口与国民生产总值或每年递减0,5% - 法国报纸摘要](/articles/rfi/1030083.md)
-
-5-11 [联合国气氛紧张：美德英牵头新疆人权会上演 中国要求取消并促抵制](/articles/rfi/1030084.md)
 
