--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-17 [内塔尼亚胡：以色列空袭加沙不会“立即”结束](/articles/voa/1040766.md)
+
 5-17 [俄共被批已成中共党支部 俄政党攻讦开打中国牌](/articles/voa/1040767.md)
 
 5-17 [媒体要求以色列对摧毁新闻机构办公楼做出解释](/articles/voa/1040768.md)
@@ -598,6 +600,4 @@
 5-4 [缅甸克钦武装称击落一架政府军直升机](/articles/voa/1041064.md)
 
 5-4 [香港支联会国安法下首次洗刷国殇之柱 冀以行动战胜恐惧延续六四烛光](/articles/voa/1041065.md)
-
-5-4 [时事大家谈: 美中对抗：大国争霸还是制度较量？](/articles/voa/1041066.md)
 
