--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-17 [深耕非洲20年，中国有没有赢得非洲民众的心？](/articles/voa/1040764.md)
+
 5-17 [联合国秘书长呼吁以巴立即停火](/articles/voa/1040765.md)
 
 5-17 [内塔尼亚胡：以色列空袭加沙不会“立即”结束](/articles/voa/1040766.md)
@@ -598,6 +600,4 @@
 5-4 [比尔·盖茨与梅琳达·盖茨宣布决定离婚](/articles/voa/1041062.md)
 
 5-4 [拜登暗示将对朝鲜采取更灵活的策略，但挑战依然存在](/articles/voa/1041063.md)
-
-5-4 [缅甸克钦武装称击落一架政府军直升机](/articles/voa/1041064.md)
 
