--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-17 [农民饱受全球气候暖化冲击期盼变革](/articles/voa/1040762.md)
+
 5-17 [美国疾控中心主任对抗击新冠病毒持“谨慎乐观”态度](/articles/voa/1040763.md)
 
 5-17 [深耕非洲20年，中国有没有赢得非洲民众的心？](/articles/voa/1040764.md)
@@ -598,6 +600,4 @@
 5-4 [把技术拱手让给中国？是否豁免新冠疫苗知识产权 拜登政府陷两难](/articles/voa/1041060.md)
 
 5-4 [欧盟制定战略减少关键领域对华依赖](/articles/voa/1041061.md)
-
-5-4 [比尔·盖茨与梅琳达·盖茨宣布决定离婚](/articles/voa/1041062.md)
 
