--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+5-17 [汉堡快“灭绝”了吗？](/articles/nyt/1046860.md)
+
+5-17 [关于“天问一号”火星着陆：你需要了解的五个问题](/articles/nyt/1046861.md)
+
 5-14 [盖茨夫妇离婚案：巨额财富怎么分？](/articles/nyt/1046862.md)
 
 5-14 [巴以冲突阴影下，加沙平民的恐惧与惊骇](/articles/nyt/1046863.md)
@@ -596,8 +600,4 @@
 2-24 [让“爱国者治港”：北京计划改革香港选举制度](/articles/nyt/1047158.md)
 
 2-24 [简报：北京拟改革香港选举制度；缅甸推进建设“数字长城”](/articles/nyt/1047159.md)
-
-2-23 [疫情中走红的纽约唐人街烧饼店](/articles/nyt/1047160.md)
-
-2-23 [疫情加剧生活及文化压力，日本女性自杀率飙升](/articles/nyt/1047161.md)
 
