--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-17 [拜登称为维吾尔族和所有人的宗教自由发声](/articles/voa/1040761.md)
+
 5-17 [农民饱受全球气候暖化冲击期盼变革](/articles/voa/1040762.md)
 
 5-17 [美国疾控中心主任对抗击新冠病毒持“谨慎乐观”态度](/articles/voa/1040763.md)
@@ -598,6 +600,4 @@
 5-4 [被中共抛弃的棋子: 《低端中国》记录经济繁荣背后的农民工苦难史](/articles/voa/1041059.md)
 
 5-4 [把技术拱手让给中国？是否豁免新冠疫苗知识产权 拜登政府陷两难](/articles/voa/1041060.md)
-
-5-4 [欧盟制定战略减少关键领域对华依赖](/articles/voa/1041061.md)
 
