--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+5-17 [算法、劳动力与劳动，兼与陈龙博士商榷](/articles/ft/1045615.md)
+
 5-17 [内塔尼亚胡：对哈马斯的打击将会持续](/articles/ft/1045616.md)
 
 5-17 [“学区房”：资源缺失的焦虑](/articles/ft/1045617.md)
@@ -598,6 +600,4 @@
 3-12 [泰国因“不良反应”暂停接种阿斯利康疫苗](/articles/ft/1045913.md)
 
 3-12 [拜登：5月1日前让所有美国成年人都能接种疫苗](/articles/ft/1045914.md)
-
-3-12 [纽约州众议院决定对州长科莫展开弹劾调查](/articles/ft/1045915.md)
 
