--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,8 @@
 路透
 ------
 
+5-17 [中国4月主要指标同比增速放缓 但经济恢复态势未改、前景可期--统计局](/articles/reuters/1038026.md)
+
 5-17 [新冠疫情短期难控 台湾双北市紧急宣布高中职以下学校全面停课两周](/articles/reuters/1038027.md)
 
 5-17 [即时观点：基数致中国4月工业、投资和消费增速回落 政策基调料不变](/articles/reuters/1038028.md)
@@ -598,6 +600,4 @@
 5-8 [滴滴回应抽成问题：网约车司机收入平均占乘客应付总额的79.1%](/articles/reuters/1038324.md)
 
 5-8 [独家：中国敦促联合国成员国不要参加下周的涉疆活动](/articles/reuters/1038325.md)
-
-5-8 [中国三大电信运营商将被纽交所摘牌](/articles/reuters/1038326.md)
 
