--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,10 @@
 金融时报
 ------
 
+5-17 [提高戒备，审慎应对，新加坡防疫措施频繁更新](/articles/ft/1045613.md)
+
+5-17 [一周世界舆论聚焦：如何化解“包围中国”？](/articles/ft/1045614.md)
+
 5-17 [算法、劳动力与劳动，兼与陈龙博士商榷](/articles/ft/1045615.md)
 
 5-17 [内塔尼亚胡：对哈马斯的打击将会持续](/articles/ft/1045616.md)
@@ -596,8 +600,4 @@
 3-15 [一周世界舆论聚焦：中美本周高层会谈的前奏不好](/articles/ft/1045911.md)
 
 3-13 [英伦疫情时期的搬家换房记](/articles/ft/1045912.md)
-
-3-12 [泰国因“不良反应”暂停接种阿斯利康疫苗](/articles/ft/1045913.md)
-
-3-12 [拜登：5月1日前让所有美国成年人都能接种疫苗](/articles/ft/1045914.md)
 
