--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-17 [月球、空间站与火星：详解中国太空雄心](/articles/nyt/1046859.md)
+
 5-17 [汉堡快“灭绝”了吗？](/articles/nyt/1046860.md)
 
 5-17 [关于“天问一号”火星着陆：你需要了解的五个问题](/articles/nyt/1046861.md)
@@ -598,6 +600,4 @@
 2-24 [新冠疫苗研发背后的中美“战略猴子储备”竞赛](/articles/nyt/1047157.md)
 
 2-24 [让“爱国者治港”：北京计划改革香港选举制度](/articles/nyt/1047158.md)
-
-2-24 [简报：北京拟改革香港选举制度；缅甸推进建设“数字长城”](/articles/nyt/1047159.md)
 
