--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-17 [巴以暴力冲突进入第二周 中国外长指责美国包庇以色列](/articles/voa/1040759.md)
+
 5-17 [化腐朽为创意的艺术机器人](/articles/voa/1040760.md)
 
 5-17 [拜登称为维吾尔族和所有人的宗教自由发声](/articles/voa/1040761.md)
@@ -598,6 +600,4 @@
 5-4 [阿里巴巴蔡崇信、雅虎杨致远等人捐款 抗击对亚裔仇恨歧视](/articles/voa/1041057.md)
 
 5-4 [美国呼吁朝鲜进行“外交接触” 七国集团外长会议讨论中国议题](/articles/voa/1041058.md)
-
-5-4 [被中共抛弃的棋子: 《低端中国》记录经济繁荣背后的农民工苦难史](/articles/voa/1041059.md)
 
