--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-17 [【图说天朝】泰剧《禁忌女孩》官方海报涉嫌辱华 大陆网民宣布弃剧](/articles/cdt/382485.md)
+
+5-17 [卖杏花｜躺平就躺平，不必抱歉](/articles/cdt/382488.md)
+
 5-16 [BBC | 习近平比作“小熊维尼” 网友创意遭删](/articles/cdt/382513.md)
 
 5-16 [【图说天朝】全国各地和尚尼姑学习党史 传承红色基因（附《求是》习近平“用好红色资源，传承好红色基因”合集）](/articles/cdt/382524.md)
@@ -596,8 +600,4 @@
 4-12 [【404文库】枪稿｜看看反华媒体急先锋扭腰时报又怎么大放厥词了](/articles/cdt/383824.md)
 
 4-12 [【404文库】枪稿｜点几个菜吃几两饭，谁说了算？](/articles/cdt/383826.md)
-
-4-12 [【404文库】枪稿｜终于有部电影把小粉红问题讲清楚了](/articles/cdt/383828.md)
-
-4-12 [【404文库】枪稿｜从副区长下课到电影院不开](/articles/cdt/383830.md)
 
