--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,9 +3,15 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-17 [NGOCN｜读者来函：关于成都49中事件的个人想法：“不要乱发瘪言”？](/articles/cdt/382479.md)
+
+5-17 [奇客资讯｜中国可能强化对加密货币的监管](/articles/cdt/382481.md)
+
 5-17 [【图说天朝】泰剧《禁忌女孩》官方海报涉嫌辱华 大陆网民宣布弃剧](/articles/cdt/382485.md)
 
 5-17 [卖杏花｜躺平就躺平，不必抱歉](/articles/cdt/382488.md)
+
+5-17 [【CDT周报】第十七期：官媒垄断的“真相”，只显示了官方操控媒体这一个真相](/articles/cdt/382490.md)
 
 5-16 [BBC | 习近平比作“小熊维尼” 网友创意遭删](/articles/cdt/382513.md)
 
@@ -594,10 +600,4 @@
 4-12 [【404文库】枪稿｜不肯当全职太太，这位前影星给所有人惹了大麻烦](/articles/cdt/383818.md)
 
 4-12 [【404文库】枪稿｜起高楼，宴宾朋的贾樟柯，为什么又把楼拆了？](/articles/cdt/383820.md)
-
-4-12 [【404文库】枪稿｜从沉默的真相到最美XXX：假的真和真的假](/articles/cdt/383822.md)
-
-4-12 [【404文库】枪稿｜看看反华媒体急先锋扭腰时报又怎么大放厥词了](/articles/cdt/383824.md)
-
-4-12 [【404文库】枪稿｜点几个菜吃几两饭，谁说了算？](/articles/cdt/383826.md)
 
