--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-17 [比尔·盖茨被指多次追求女下属，并与爱泼斯坦有往来](/articles/nyt/1046857.md)
+
 5-17 [多年平静后，巴以冲突为何现在突然爆发？](/articles/nyt/1046858.md)
 
 5-17 [月球、空间站与火星：详解中国太空雄心](/articles/nyt/1046859.md)
@@ -598,6 +600,4 @@
 2-24 [研究发现喝咖啡可能降低心力衰竭风险](/articles/nyt/1047155.md)
 
 2-24 [用步枪和钢丝钳断网：缅甸积极建设数字防火墙](/articles/nyt/1047156.md)
-
-2-24 [新冠疫苗研发背后的中美“战略猴子储备”竞赛](/articles/nyt/1047157.md)
 
