--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+5-17 [台湾三天确诊达719例 台北万华阳性率10%如纽约初期](/articles/rfa/1045583.md)
+
 5-17 [毛左文革55周年座谈会取消   北京利用文革正反两派巩固权力](/articles/rfa/1045584.md)
 
 5-16 [重庆保利香雪小区爆发大规模抗暴事件  业主赶走数百名黑衣人](/articles/rfa/1045585.md)
@@ -598,6 +600,4 @@
 4-14 [黑山共和国坠中国一带一路陷阱 求助欧盟遭拒](/articles/rfa/1045881.md)
 
 4-14 [上阵父子兵：一个香港抗争家庭的抵抗与流亡之路](/articles/rfa/1045882.md)
-
-4-13 [新疆伊斯兰教斋月首日   穆斯林无封斋当局鼓励婚庆](/articles/rfa/1045883.md)
 
