--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-17 [美中皆表态支持疫苗专利豁免，无国界医生:救人抗疫具优先性](/articles/voa/1040756.md)
+
+5-17 [壹传媒被香港证券交易所停止交易 黎智英再添新罪名](/articles/voa/1040757.md)
+
 5-17 [控制留学生流向 北京在中西竞逐中的下一枚棋子？](/articles/voa/1040758.md)
 
 5-17 [巴以暴力冲突进入第二周 中国外长指责美国包庇以色列](/articles/voa/1040759.md)
@@ -596,8 +600,4 @@
 5-4 [拜登总统宣布把本财年美国接受难民人数上限翻两番](/articles/voa/1041054.md)
 
 5-4 [拜登政府为印度新冠危机提供医用物资](/articles/voa/1041055.md)
-
-5-4 [VOA连线(文灏): 世界新闻自由日: 中国在海内外加强信息操纵](/articles/voa/1041056.md)
-
-5-4 [阿里巴巴蔡崇信、雅虎杨致远等人捐款 抗击对亚裔仇恨歧视](/articles/voa/1041057.md)
 
