--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+5-17 [秋后算帐式审讯   香港支联会大部分骨干成员将入狱](/articles/rfa/1045582.md)
+
 5-17 [台湾三天确诊达719例 台北万华阳性率10%如纽约初期](/articles/rfa/1045583.md)
 
 5-17 [毛左文革55周年座谈会取消   北京利用文革正反两派巩固权力](/articles/rfa/1045584.md)
@@ -598,6 +600,4 @@
 4-14 [加拿大反对中国南海扩张  与东盟国家展开军事合作](/articles/rfa/1045880.md)
 
 4-14 [黑山共和国坠中国一带一路陷阱 求助欧盟遭拒](/articles/rfa/1045881.md)
-
-4-14 [上阵父子兵：一个香港抗争家庭的抵抗与流亡之路](/articles/rfa/1045882.md)
 
