--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+5-17 [印度科学家辞去新冠疫情特别工作组职务](/articles/ft/1045611.md)
+
 5-17 [FT社评：慎用情感人工智能](/articles/ft/1045612.md)
 
 5-17 [提高戒备，审慎应对，新加坡防疫措施频繁更新](/articles/ft/1045613.md)
@@ -598,6 +600,4 @@
 3-15 [共享经济的欧盟生死之战](/articles/ft/1045909.md)
 
 3-15 [用机器学习模型解读拜登政府“知华派”高官：布拉德•塞策](/articles/ft/1045910.md)
-
-3-15 [一周世界舆论聚焦：中美本周高层会谈的前奏不好](/articles/ft/1045911.md)
 
