--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-17 [中国4月零售额和工业增加值增速回落引发对经济复苏前景的担忧](/articles/voa/1040753.md)
+
+5-17 [“大学”消失 “湖畔”还能留多久？](/articles/voa/1040754.md)
+
 5-17 [梵蒂冈宣布委任周守仁神父担任香港天主教教区新主教](/articles/voa/1040755.md)
 
 5-17 [美中皆表态支持疫苗专利豁免，无国界医生:救人抗疫具优先性](/articles/voa/1040756.md)
@@ -596,8 +600,4 @@
 5-4 [香港推进禁止假新闻立法 被指真实目的是进一步打压自由](/articles/voa/1041051.md)
 
 5-4 [印尼裔基督徒和穆斯林共享礼拜空间](/articles/voa/1041052.md)
-
-5-4 [特朗普称2020年大选失败是“大谎言”](/articles/voa/1041053.md)
-
-5-4 [拜登总统宣布把本财年美国接受难民人数上限翻两番](/articles/voa/1041054.md)
 
