--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+5-18 [台湾新冠病例陡升引国安担忧](/articles/voa/1040749.md)
+
+5-18 [内塔尼亚胡：对加沙的空袭将会火力全开 持续进行](/articles/voa/1040750.md)
+
+5-18 [易富贤：普查越来越不靠谱，中国人口老化中共政权稳固](/articles/voa/1040751.md)
+
+5-17 [印度日增新冠病例低于30万 一线希望背后仍然危机四伏](/articles/voa/1040752.md)
+
 5-17 [中国4月零售额和工业增加值增速回落引发对经济复苏前景的担忧](/articles/voa/1040753.md)
 
 5-17 [“大学”消失 “湖畔”还能留多久？](/articles/voa/1040754.md)
@@ -592,12 +600,4 @@
 5-4 [七国集团外长面对面会谈 讨论最紧迫地缘政治挑战](/articles/voa/1041047.md)
 
 5-4 [拱手让出数据和市占率？蚂蚁助人行推数字人民币](/articles/voa/1041048.md)
-
-5-4 [中共百周年党庆前夕 红色旅游热潮席卷全国](/articles/voa/1041049.md)
-
-5-4 [五角大楼宣布防长奥斯汀将出席香格里拉对话会](/articles/voa/1041050.md)
-
-5-4 [香港推进禁止假新闻立法 被指真实目的是进一步打压自由](/articles/voa/1041051.md)
-
-5-4 [印尼裔基督徒和穆斯林共享礼拜空间](/articles/voa/1041052.md)
 
