--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+5-18 [曾经带头拥抱中国的加拿大   如今吹起支持台湾风](/articles/rfa/1045576.md)
+
+5-18 [中国斡旋以巴冲突 学者: 俄罗斯介入叙利亚问题的翻版](/articles/rfa/1045577.md)
+
 5-17 [台湾《苹果日报》纸版谢幕](/articles/rfa/1045578.md)
 
 5-17 [美国、台湾破例恭贺边巴次仁当选西藏流亡政府领导人](/articles/rfa/1045579.md)
@@ -596,8 +600,4 @@
 4-14 [拜登派“好朋友”非官方访问团抵台 看重对台民主承诺](/articles/rfa/1045874.md)
 
 4-14 [美国研发的辉瑞疫苗运抵中国   官方屏蔽民众须自费接种消息](/articles/rfa/1045875.md)
-
-4-14 [日本决定将福岛核废水排海  中韩台不满](/articles/rfa/1045876.md)
-
-4-14 [亲人抹黑 -- 中国回应国际对新疆人权批评声音的招数](/articles/rfa/1045877.md)
 
