--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-18 [专家称：美国将更频繁使用无人机监视中国 中国也在积极发展自杀式无人机](/articles/voa/1040746.md)
+
 5-18 [美国和欧盟将共同要求中国对“扭曲的贸易政策”负责](/articles/voa/1040747.md)
 
 5-18 [拜登文在寅会谈在即 韩或部分参与四方安全对话](/articles/voa/1040748.md)
@@ -598,6 +600,4 @@
 5-4 [欧盟药监机构开始审查中国科兴疫苗](/articles/voa/1041044.md)
 
 5-4 [中国主持安理会会议，布林肯称与中国对话“艰难”](/articles/voa/1041045.md)
-
-5-4 [蔡英文获“约翰·麦凯恩公共服务领袖奖” 其领导能力获肯定](/articles/voa/1041046.md)
 
