--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-18 [10名香港民主派骨干承认前年10-1未经批准集结 押后5月28日判刑](/articles/voa/1040744.md)
+
+5-18 [时事大家谈: 文革55周年：毛为何发动？习为何重评?](/articles/voa/1040745.md)
+
 5-18 [专家称：美国将更频繁使用无人机监视中国 中国也在积极发展自杀式无人机](/articles/voa/1040746.md)
 
 5-18 [美国和欧盟将共同要求中国对“扭曲的贸易政策”负责](/articles/voa/1040747.md)
@@ -596,8 +600,4 @@
 5-5 [俄罗斯在前所未有的压抑气氛中度过世界新闻自由日](/articles/voa/1041042.md)
 
 5-5 [香港问题专家谈港民自由遭全面打压](/articles/voa/1041043.md)
-
-5-4 [欧盟药监机构开始审查中国科兴疫苗](/articles/voa/1041044.md)
-
-5-4 [中国主持安理会会议，布林肯称与中国对话“艰难”](/articles/voa/1041045.md)
 
