--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-18 [小晖原创 | 呦呦鹿鸣已经失踪两个月了](/articles/cdt/382469.md)
+
 5-18 [驯荒记 | 我一次又一次陪着坠楼学生的亲人陷入循环](/articles/cdt/382470.md)
 
 5-17 [丁香医生｜为一个更加包容的世界努力，这关乎每一个人生存的尊严](/articles/cdt/382474.md)
@@ -598,6 +600,4 @@
 4-12 [【404文库】枪稿｜第100个三八节，谈谈福原爱和赵亭](/articles/cdt/383804.md)
 
 4-12 [【404文库】枪稿｜这一年，我们的新生儿（又名电池）更少了](/articles/cdt/383806.md)
-
-4-12 [【404文库】枪稿｜大家别骂了，阳刚之气多不了的](/articles/cdt/383807.md)
 
