--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+5-18 [盖茨否认婚外情调查与他离开微软董事会有关](/articles/ft/1045608.md)
+
 5-18 [中国出口有什么新动向](/articles/ft/1045609.md)
 
 5-18 [资金“堰塞湖”未来如何演变？](/articles/ft/1045610.md)
@@ -598,6 +600,4 @@
 3-16 [出生人口下跌会让留学渐不再为刚需](/articles/ft/1045906.md)
 
 3-15 [美国对小米的投资禁令被判暂缓执行](/articles/ft/1045907.md)
-
-3-15 [大厂员工阶级分析](/articles/ft/1045908.md)
 
