--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,10 @@
 金融时报
 ------
 
+5-18 [美国将再匀给他国2000万剂新冠疫苗](/articles/ft/1045606.md)
+
+5-18 [拜登与内塔尼亚胡通电话 表态支持以巴停火](/articles/ft/1045607.md)
+
 5-18 [盖茨否认婚外情调查与他离开微软董事会有关](/articles/ft/1045608.md)
 
 5-18 [中国出口有什么新动向](/articles/ft/1045609.md)
@@ -596,8 +600,4 @@
 3-16 [对Cookie使用的监管，欧盟走到了哪一步？](/articles/ft/1045904.md)
 
 3-16 [美债收益率上行的背后是通胀预期吗？](/articles/ft/1045905.md)
-
-3-16 [出生人口下跌会让留学渐不再为刚需](/articles/ft/1045906.md)
-
-3-15 [美国对小米的投资禁令被判暂缓执行](/articles/ft/1045907.md)
 
