--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-18 [巴以暴力冲突进入第二周：你应该知道的六件事](/articles/nyt/1046856.md)
+
 5-17 [比尔·盖茨被指多次追求女下属，并与爱泼斯坦有往来](/articles/nyt/1046857.md)
 
 5-17 [多年平静后，巴以冲突为何现在突然爆发？](/articles/nyt/1046858.md)
@@ -598,6 +600,4 @@
 2-24 [你敢相信这事竟然发生在美国？](/articles/nyt/1047154.md)
 
 2-24 [研究发现喝咖啡可能降低心力衰竭风险](/articles/nyt/1047155.md)
-
-2-24 [用步枪和钢丝钳断网：缅甸积极建设数字防火墙](/articles/nyt/1047156.md)
 
