--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-18 [美欧解决贸易争端 联手问责中国](/articles/dw/1042420.md)
+
 5-18 [台湾疫情恶化 外交官盼争取更多疫苗](/articles/dw/1042421.md)
 
 5-18 [美三度阻挡安理会声明 北京要华盛顿承担责任](/articles/dw/1042422.md)
@@ -598,6 +600,4 @@
 4-30 [美情报总监：台湾正朝独立方向发展](/articles/dw/1042718.md)
 
 4-30 [辽宁舰台海演训常态化? 中国：航母不是「宅男」](/articles/dw/1042719.md)
-
-4-30 [疫情失控面临问责 印度扩大疫苗注射规模](/articles/dw/1042720.md)
 
