--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-18 [香港突然宣布驻台办事处停运 台港关系更趋恶化](/articles/voa/1040735.md)
+
 5-18 [天主教香港教区下一任主教称未决定会否参加六四纪念活动](/articles/voa/1040736.md)
 
 5-18 [以色列空袭重创加沙，巴以暴力冲突进入第二周](/articles/voa/1040737.md)
@@ -598,6 +600,4 @@
 5-5 [布林肯：美国不是要遏制中国 但要捍卫基于规则的国际秩序](/articles/voa/1041033.md)
 
 5-5 [日本加大菲律宾军援力度，首次提供自卫队装备](/articles/voa/1041034.md)
-
-5-5 [美国三月份贸易逆差创新高](/articles/voa/1041035.md)
 
