--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-18 [娱乐有意思｜躺平，不消费，不社交，不结婚，年轻人的另类抵抗](/articles/cdt/382438.md)
+
 5-18 [【网络民议】全国一季度离婚人数大跌七成多  网友：取消离婚还能降到0](/articles/cdt/382440.md)
 
 5-18 [麦迪讯 | 社论：记一次有必要的失误——由成都四十九中事件所想到的](/articles/cdt/382463.md)
@@ -598,6 +600,4 @@
 4-13 [【网络民议】豆瓣大规模封杀女权小组  网友：温水煮开了](/articles/cdt/383790.md)
 
 4-13 [世风｜肖美丽：成为“公敌”的第十二天](/articles/cdt/383800.md)
-
-4-13 [【CDT推荐】本周推荐媒体](/articles/cdt/383801.md)
 
