--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+5-18 [五个关键要点，迅速了解苹果如何向中国政府妥协](/articles/nyt/1046853.md)
+
+5-18 [华融债务困局考验北京金融改革决心](/articles/nyt/1046854.md)
+
 5-18 [审查、监控与利润：为做生意，苹果向中国政府妥协](/articles/nyt/1046855.md)
 
 5-18 [巴以暴力冲突进入第二周：你应该知道的六件事](/articles/nyt/1046856.md)
@@ -596,8 +600,4 @@
 2-25 [香港政府利用历史灌输爱国主义和忠诚](/articles/nyt/1047151.md)
 
 2-25 [“小甜甜”布兰妮和我：被好莱坞毁掉的女童星](/articles/nyt/1047152.md)
-
-2-25 [简报：香港利用历史灌输爱国主义；全球疫苗接种计划启动](/articles/nyt/1047153.md)
-
-2-24 [你敢相信这事竟然发生在美国？](/articles/nyt/1047154.md)
 
