--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,12 @@
 路透
 ------
 
+5-18 [（重发）独家：空中客车加强要求供应商的产能及产品品质](/articles/reuters/1037960.md)
+
+5-18 [独家：印度在10月之前不大可能恢复大规模疫苗出口--消息人士](/articles/reuters/1037961.md)
+
+5-18 [中国股市收高 受能源和运输类股涨势带动](/articles/reuters/1037962.md)
+
 5-18 [香港国泰航空料5月货运航班运作陆续恢复 因更多机组人员接种疫苗](/articles/reuters/1037963.md)
 
 5-18 [英国第一季失业率再次下滑 招聘升温](/articles/reuters/1037964.md)
@@ -594,10 +600,4 @@
 5-11 [美军舰艇在霍尔木兹海峡向靠近的伊朗伊斯兰革命卫队舰艇鸣枪示警](/articles/reuters/1038258.md)
 
 5-11 [美国监管机构批准辉瑞疫苗用于12-15岁儿童的紧急使用授权](/articles/reuters/1038259.md)
-
-5-11 [中国债市一年AAA级NCD利率跌破2.9%创逾三个月新低 央行平稳操作资金宽松](/articles/reuters/1038260.md)
-
-5-11 [市场洞察：人民币劲扬创近35个月新高 关键关口还得看美元脸色](/articles/reuters/1038261.md)
-
-5-11 [特斯拉德州车祸调查显示 自动转向系统在事发路段“不可用”--NTSB](/articles/reuters/1038262.md)
 
