--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-18 [全现在｜他们寻找江绪林，就是在寻找自己](/articles/cdt/382420.md)
+
+5-18 [【立此存照】共青团中央出品：榜样青年演讲节目《与世界说》](/articles/cdt/382437.md)
+
 5-18 [娱乐有意思｜躺平，不消费，不社交，不结婚，年轻人的另类抵抗](/articles/cdt/382438.md)
 
 5-18 [【网络民议】全国一季度离婚人数大跌七成多  网友：取消离婚还能降到0](/articles/cdt/382440.md)
@@ -596,8 +600,4 @@
 4-13 [叫虱 | 是疯狂消费还是热捧张维为：渴求力量感的中产阶级](/articles/cdt/383777.md)
 
 4-13 [银河铁路局地球分局 | 一个非公开的夜晚，今夜无女入眠](/articles/cdt/383780.md)
-
-4-13 [【网络民议】豆瓣大规模封杀女权小组  网友：温水煮开了](/articles/cdt/383790.md)
-
-4-13 [世风｜肖美丽：成为“公敌”的第十二天](/articles/cdt/383800.md)
 
