--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+5-18 [台湾确诊数稍降 两岸为疫苗拌嘴](/articles/rfa/1045567.md)
+
+5-18 [中共“七一”百年党庆临时安排空中阅兵](/articles/rfa/1045568.md)
+
 5-18 [澳铁矿石价涨五成  中国稀土价跌跌不休](/articles/rfa/1045569.md)
 
 5-18 [新疆报告：上千神职人员被关押 伊斯兰教正被终结](/articles/rfa/1045570.md)
@@ -596,8 +600,4 @@
 4-15 [美气候特使克里访华  应该合作还是竞争？](/articles/rfa/1045865.md)
 
 4-15 [美五大情报部门剑指中国：美国最大的威胁](/articles/rfa/1045866.md)
-
-4-15 [九成疫苗来自中国      智利确诊率为何不减反增?](/articles/rfa/1045867.md)
-
-4-15 [中国高中生军训总计不得少于七天：能否加强国防后备力量建设？](/articles/rfa/1045868.md)
 
