--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-18 [骚客文艺｜别被鲁迅骗了——躺平吧，别去走路](/articles/cdt/382416.md)
+
+5-18 [兽楼处｜反对者的四十年](/articles/cdt/382418.md)
+
 5-18 [全现在｜他们寻找江绪林，就是在寻找自己](/articles/cdt/382420.md)
 
 5-18 [【立此存照】共青团中央出品：榜样青年演讲节目《与世界说》](/articles/cdt/382437.md)
@@ -596,8 +600,4 @@
 4-13 [Vista看天下 | 他们在路上搏命赚的钱，都在路上扣完了](/articles/cdt/383774.md)
 
 4-13 [东雷老评 | 服毒自尽的卡车司机金德强不应该白死啊](/articles/cdt/383776.md)
-
-4-13 [叫虱 | 是疯狂消费还是热捧张维为：渴求力量感的中产阶级](/articles/cdt/383777.md)
-
-4-13 [银河铁路局地球分局 | 一个非公开的夜晚，今夜无女入眠](/articles/cdt/383780.md)
 
