--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-18 [夕阳老年人话“人普” 只关心过好“剩下的日子”](/articles/voa/1040733.md)
+
 5-18 [布林肯正访问冰岛 将与俄外长举行首次面对面会晤](/articles/voa/1040734.md)
 
 5-18 [香港突然宣布驻台办事处停运 台港关系更趋恶化](/articles/voa/1040735.md)
@@ -598,6 +600,4 @@
 5-5 [VOA连线(张蓉湘): 美布局非洲 外交斡旋提格雷危机 同时关注中国](/articles/voa/1041031.md)
 
 5-5 [白宫要义: 拜登设定独立纪念日为完成第二阶段疫苗接种目标](/articles/voa/1041032.md)
-
-5-5 [布林肯：美国不是要遏制中国 但要捍卫基于规则的国际秩序](/articles/voa/1041033.md)
 
