--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-18 [菲律宾总统下封口令 禁止内阁官员公开讨论南中国海问题](/articles/voa/1040732.md)
+
 5-18 [夕阳老年人话“人普” 只关心过好“剩下的日子”](/articles/voa/1040733.md)
 
 5-18 [布林肯正访问冰岛 将与俄外长举行首次面对面会晤](/articles/voa/1040734.md)
@@ -598,6 +600,4 @@
 5-5 [共和党众议员切尼因抨击特朗普而遭到党内批评](/articles/voa/1041030.md)
 
 5-5 [VOA连线(张蓉湘): 美布局非洲 外交斡旋提格雷危机 同时关注中国](/articles/voa/1041031.md)
-
-5-5 [白宫要义: 拜登设定独立纪念日为完成第二阶段疫苗接种目标](/articles/voa/1041032.md)
 
