--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+5-18 [台湾驻港办事处逾5万中国禁忌程式全消失 纽时：苹果向中国政府妥协](/articles/rfa/1045565.md)
+
 5-18 [香港候任主教周守仁登场  六四、强拆十字架议题  他怎么说？](/articles/rfa/1045566.md)
 
 5-18 [台湾确诊数稍降 两岸为疫苗拌嘴](/articles/rfa/1045567.md)
@@ -598,6 +600,4 @@
 4-15 [“五毛”已经out  中国现靠两千多万的“网络志愿者”](/articles/rfa/1045863.md)
 
 4-15 [新版《党史》淡化文革，颂习内容占四分之一](/articles/rfa/1045864.md)
-
-4-15 [美气候特使克里访华  应该合作还是竞争？](/articles/rfa/1045865.md)
 
