--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+5-19 [中国1季度离婚率直落70% 一纸规定扭转了多年趋势？](/articles/voa/1040725.md)
+
+5-19 [时事大家谈: 习近平要“红色江山”世代相传，为人民还是为政权？](/articles/voa/1040726.md)
+
+5-19 [拜登与以色列总理通话 表示“支持停火”](/articles/voa/1040727.md)
+
 5-19 [斯里兰卡最高法院称中国支持的港口城法案违反宪法](/articles/voa/1040728.md)
 
 5-18 [消息人士称中国或将放宽生育政策，但担心影响社会稳定](/articles/voa/1040729.md)
@@ -594,10 +600,4 @@
 5-5 [美国“每天都在努力”促请台湾优先供应美国汽车大厂所需芯片](/articles/voa/1041023.md)
 
 5-5 [蔡英文获“麦凯恩公共服务领袖奖” 中国要求“立即取消错误决定”](/articles/voa/1041024.md)
-
-5-5 [坎贝尔：美若在台湾问题上实行“战略清晰”有“重大不利面”](/articles/voa/1041025.md)
-
-5-5 [缅甸驻联合国大使呼吁美英联合施压安理会制裁军政府](/articles/voa/1041026.md)
-
-5-5 [外国部队开始撤军，阿富汗人担心塔利班卷土重来](/articles/voa/1041027.md)
 
