--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+5-19 [研究显示：AZ与辉瑞疫苗混用安全有效](/articles/rfi/1029633.md)
+
+5-19 [全球施打逾15亿剂疫苗 中美印度占近3/5 – 法国国际广播电台 - RFI](/articles/rfi/1029634.md)
+
 5-19 [对疫情后乐观情绪消退 欧股平盘作收 – 法国国际广播电台 - RFI](/articles/rfi/1029635.md)
 
 5-19 [法国政府宣布新冠解封 民众并不放心 - 法国风土人情](/articles/rfi/1029636.md)
@@ -596,8 +600,4 @@
 5-14 [布林肯：美国赞成下周初就巴以冲突举行安理会会议](/articles/rfi/1029931.md)
 
 5-14 [美国完全接种疫苗的人室内无需戴口罩 拜登称赞抗击新冠疫情&quot;重要的一天&quot;](/articles/rfi/1029932.md)
-
-5-14 [洪都拉斯拟向北京获取疫苗 美国指责利用疫苗追求政治目的](/articles/rfi/1029933.md)
-
-5-14 [中东暴力：马克龙“强烈”谴责哈马斯宣称负责的射击事件](/articles/rfi/1029934.md)
 
