--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+5-19 [助人翻墙遭遇取保候审：一位旅韩中国学生的故事](/articles/rfa/1045561.md)
+
+5-19 [台湾人国籍登记为中国   向欧洲人权法院状告挪威政府](/articles/rfa/1045562.md)
+
 5-18 [德国自民党删除“一中”   支持台湾人民自决](/articles/rfa/1045563.md)
 
 5-18 [香港突停在台经贸办运作 学者称将影响中国芯片供应链](/articles/rfa/1045564.md)
@@ -596,8 +600,4 @@
 4-15 [欧美砸重金打造半导体制造业 台湾谋求巩固并扩大优势](/articles/rfa/1045859.md)
 
 4-15 [蔡英文接见美国访问团 杜德：应老友拜登请托而来](/articles/rfa/1045860.md)
-
-4-15 [央媒发香港抗争“幕后金主”认罪视频    “金主” 李亨利同是薄熙来案证人](/articles/rfa/1045861.md)
-
-4-15 [人行论文警告中国人口现衰减风险](/articles/rfa/1045862.md)
 
