--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+5-19 [美疾控中心主任：美国正在走出新冠疫情](/articles/voa/1040722.md)
+
+5-19 [接种后陆续确诊 都是中国疫苗惹的祸？](/articles/voa/1040723.md)
+
+5-19 [香港教区候任主教周守仁会见传媒 吁与年青人对话未正面回应政治议题](/articles/voa/1040724.md)
+
 5-19 [中国1季度离婚率直落70% 一纸规定扭转了多年趋势？](/articles/voa/1040725.md)
 
 5-19 [时事大家谈: 习近平要“红色江山”世代相传，为人民还是为政权？](/articles/voa/1040726.md)
@@ -594,10 +600,4 @@
 5-5 [美官员称美日将合作维持台海现状](/articles/voa/1041020.md)
 
 5-5 [专访澳大利亚资深记者沃克：谈中澳关系与战狼和人质外交](/articles/voa/1041021.md)
-
-5-5 [中国长征5B号火箭残骸将失控坠落地面 美太空司令部：随时跟踪并发出预警](/articles/voa/1041022.md)
-
-5-5 [美国“每天都在努力”促请台湾优先供应美国汽车大厂所需芯片](/articles/voa/1041023.md)
-
-5-5 [蔡英文获“麦凯恩公共服务领袖奖” 中国要求“立即取消错误决定”](/articles/voa/1041024.md)
 
