--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+5-19 [中国拒绝与美国进行核武谈判](/articles/voa/1040719.md)
+
+5-19 [以色列军队和巴勒斯坦激进分子继续跨境相互攻击](/articles/voa/1040720.md)
+
+5-19 [匈牙利首都市政府反对修建复旦大学分校](/articles/voa/1040721.md)
+
 5-19 [美疾控中心主任：美国正在走出新冠疫情](/articles/voa/1040722.md)
 
 5-19 [接种后陆续确诊 都是中国疫苗惹的祸？](/articles/voa/1040723.md)
@@ -594,10 +600,4 @@
 5-6 [缅甸军政府打压媒体禁用卫星天线](/articles/voa/1041017.md)
 
 5-5 [欧盟公布工业战略 减少关键领域对中国和其他国家依赖](/articles/voa/1041018.md)
-
-5-5 [台湾卫福部长发文美刊 呼吁接纳台湾参与世卫大会](/articles/voa/1041019.md)
-
-5-5 [美官员称美日将合作维持台海现状](/articles/voa/1041020.md)
-
-5-5 [专访澳大利亚资深记者沃克：谈中澳关系与战狼和人质外交](/articles/voa/1041021.md)
 
