--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,18 @@
 法广
 ------
 
+5-19 [马克龙呼吁放弃新冠疫苗专利](/articles/rfi/1029627.md)
+
+5-19 [研究：辉瑞莫德纳疫苗对印度变种病毒应有效](/articles/rfi/1029628.md)
+
+5-19 [飓风袭印度   一艘船只沉没 127人失踪](/articles/rfi/1029629.md)
+
+5-19 [西班牙遣返一半儿入境非法移民](/articles/rfi/1029630.md)
+
+5-19 [欧盟宣布将暂停对部分美国产品加征关税](/articles/rfi/1029631.md)
+
+5-19 [布林肯：美国希望避免北极地区军事化](/articles/rfi/1029632.md)
+
 5-19 [研究显示：AZ与辉瑞疫苗混用安全有效](/articles/rfi/1029633.md)
 
 5-19 [全球施打逾15亿剂疫苗 中美印度占近3/5 – 法国国际广播电台 - RFI](/articles/rfi/1029634.md)
@@ -588,16 +600,4 @@
 5-14 [以巴冲突 联合国安理会16日召开视讯会议 – 法国国际广播电台 - RFI](/articles/rfi/1029925.md)
 
 5-14 [民间反中情绪升温 哈萨克禁止向外国人出售土地](/articles/rfi/1029926.md)
-
-5-14 [以色列军人攻入加萨走廊 持续与哈玛斯对战 – 法国国际广播电台 - RFI](/articles/rfi/1029927.md)
-
-5-14 [阿里重挫 美团发抖](/articles/rfi/1029928.md)
-
-5-14 [以军兵临加沙 以国内部暴力加剧 - 要闻分析](/articles/rfi/1029929.md)
-
-5-14 [欧盟对中国不再抱幻想，欧盟的风向变了，开始转向印太地区 - 法国世界报](/articles/rfi/1029930.md)
-
-5-14 [布林肯：美国赞成下周初就巴以冲突举行安理会会议](/articles/rfi/1029931.md)
-
-5-14 [美国完全接种疫苗的人室内无需戴口罩 拜登称赞抗击新冠疫情&quot;重要的一天&quot;](/articles/rfi/1029932.md)
 
