--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+5-19 [中国四月份经济增速趋缓  失业率控制不如欧美？](/articles/rfa/1045559.md)
+
 5-19 [强行召开庭前会议   孙大午或面临二十五年重刑](/articles/rfa/1045560.md)
 
 5-19 [助人翻墙遭遇取保候审：一位旅韩中国学生的故事](/articles/rfa/1045561.md)
@@ -598,6 +600,4 @@
 4-15 [北京在港宣传“国安教育日”    文革气氛笼罩香港](/articles/rfa/1045857.md)
 
 4-15 [中国针对杜德访台释放军演消息 周边海域成美中角力舞台](/articles/rfa/1045858.md)
-
-4-15 [欧美砸重金打造半导体制造业 台湾谋求巩固并扩大优势](/articles/rfa/1045859.md)
 
