--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-19 [布林肯反对北极军事化](/articles/voa/1040714.md)
+
+5-19 [美将任命特使保护LGBTQI权益](/articles/voa/1040715.md)
+
 5-19 [美财政部再次推迟对中国军企投资禁令的生效期](/articles/voa/1040716.md)
 
 5-19 [众议院共和党领袖反对成立新委员会调查1月6日冲击国会事件](/articles/voa/1040717.md)
@@ -596,8 +600,4 @@
 5-6 [时事大家谈: 重新定调文革，习近平释放危险信号？](/articles/voa/1041012.md)
 
 5-6 [香港721袭击事件受害人终止向警务处长索偿 何俊仁批警方隐瞒真相](/articles/voa/1041013.md)
-
-5-6 [美国生育率2020年再创新低](/articles/voa/1041014.md)
-
-5-6 [拜登总统的新目标：独立日前为70%的成年人接种至少1针疫苗](/articles/voa/1041015.md)
 
