--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-19 [CDT月度人物 | 服毒自杀的卡车司机金德强：“我用我的死来唤醒领导对这个事情的重视”](/articles/cdt/382401.md)
+
 5-18 [【网络民议】有的人出生就在罗马，有的人出生就是骡马](/articles/cdt/382415.md)
 
 5-18 [骚客文艺｜别被鲁迅骗了——躺平吧，别去走路](/articles/cdt/382416.md)
@@ -598,6 +600,4 @@
 4-13 [中式没品笑话百科｜被铁拳砸中后，自称“女权主义者”的小粉红们如此抗议](/articles/cdt/383763.md)
 
 4-13 [奇客资讯｜中国大力推广国家反诈中‪心APP](/articles/cdt/383768.md)
-
-4-13 [Vista看天下 | 他们在路上搏命赚的钱，都在路上扣完了](/articles/cdt/383774.md)
 
