--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-19 [香港外佣面临的另一种流行病：系统性歧视](/articles/nyt/1046852.md)
+
 5-18 [五个关键要点，迅速了解苹果如何向中国政府妥协](/articles/nyt/1046853.md)
 
 5-18 [华融债务困局考验北京金融改革决心](/articles/nyt/1046854.md)
@@ -598,6 +600,4 @@
 2-25 [CIA局长提名人警告中俄情报威胁](/articles/nyt/1047150.md)
 
 2-25 [香港政府利用历史灌输爱国主义和忠诚](/articles/nyt/1047151.md)
-
-2-25 [“小甜甜”布兰妮和我：被好莱坞毁掉的女童星](/articles/nyt/1047152.md)
 
