--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,12 @@
 金融时报
 ------
 
+5-19 [中国全面放开生育的拦路虎](/articles/ft/1045601.md)
+
+5-19 [公司治理中“另类”：伯克希尔的治理逻辑](/articles/ft/1045602.md)
+
+5-19 [比特币能耗之争](/articles/ft/1045603.md)
+
 5-18 [布伦特原油突破每桶70美元](/articles/ft/1045604.md)
 
 5-18 [美国就业人数为何不及预期？](/articles/ft/1045605.md)
@@ -594,10 +600,4 @@
 3-17 [利率的惯性：两百年美国利率史](/articles/ft/1045899.md)
 
 3-17 [如何治理无实际控制人的企业？](/articles/ft/1045900.md)
-
-3-16 [“小米赢诉”是美国政府对中企释放友好信号吗？](/articles/ft/1045901.md)
-
-3-16 [中国污染整治努力开始压低铁矿石价格](/articles/ft/1045902.md)
-
-3-16 [展望2021：正视“高端”就业压力](/articles/ft/1045903.md)
 
