--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,12 @@
 路透
 ------
 
+5-19 [美墨加联合声明称贸易协议会谈“热烈” 对分歧轻描淡写（更新版）](/articles/reuters/1037922.md)
+
+5-19 [亚股下滑比特币大跌 通胀担忧持续令投资者削减风险资产](/articles/reuters/1037923.md)
+
+5-19 [鸿海设在越南北江省工业园区的工厂因疫情原因暂时关闭](/articles/reuters/1037924.md)
+
 5-19 [加拿大贸易部长称已向美国重申计划继续推进征收数字服务税](/articles/reuters/1037925.md)
 
 5-19 [美国参议院民主党公布520亿美元芯片投资提案](/articles/reuters/1037926.md)
@@ -594,10 +600,4 @@
 5-12 [焦点：美国汽油供应吃紧 Colonial管道遭黑客攻击已关闭五天](/articles/reuters/1038220.md)
 
 5-12 [路透测算的人民币中间价料开在6.4306元附近 较上日贬52点](/articles/reuters/1038221.md)
-
-5-12 [中国财政部等召开房地产税改革试点工作座谈会 听取部分城市及专家意见](/articles/reuters/1038222.md)
-
-5-12 [中国商业银行一季度净利同比上升2.4% 不良贷款率微降至1.8%--银保监会](/articles/reuters/1038223.md)
-
-5-12 [美元持于10周低位附近 关注周三的消费者物价指数报告](/articles/reuters/1038224.md)
 
