--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-19 [拜登称不能让中国的电动汽车制造业超越美国 中国：别动不动拿中国说事](/articles/voa/1040704.md)
+
 5-19 [两党议员吁抵制北京冬奥 史密斯：美企们，不要赞助“种族灭绝奥运”](/articles/voa/1040705.md)
 
 5-19 [邀以巴和谈 批美不给力 学者：中国想做中东调停人，难！](/articles/voa/1040706.md)
@@ -598,6 +600,4 @@
 5-6 [以色列总统挑选内塔尼亚胡最强大的对手组建新政府](/articles/voa/1041002.md)
 
 5-6 [美撤军之际阿富汗战况加剧 美军为支援阿军而空袭塔利班武装](/articles/voa/1041003.md)
-
-5-6 [七国集团支持台湾在世卫大会的观察员地位](/articles/voa/1041004.md)
 
