--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-19 [巴以冲突加剧加沙地区人道主义危机](/articles/nyt/1046850.md)
+
 5-19 [美国拟投入1200亿美元支持科学创新，以抗衡中国](/articles/nyt/1046851.md)
 
 5-19 [香港外佣面临的另一种流行病：系统性歧视](/articles/nyt/1046852.md)
@@ -598,6 +600,4 @@
 2-25 [中国全职太太离婚获5万元补偿引热议](/articles/nyt/1047148.md)
 
 2-25 [对华经济战初步攻势？拜登签署行政令加强供应链](/articles/nyt/1047149.md)
-
-2-25 [CIA局长提名人警告中俄情报威胁](/articles/nyt/1047150.md)
 
