--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-19 [专访：台湾疫情再起的关键因素](/articles/dw/1042403.md)
+
 5-19 [以巴停火遥遥无期 欧盟外长开会内讧](/articles/dw/1042404.md)
 
 5-19 [得罪中国没疫苗? 巴西议会进行调查](/articles/dw/1042405.md)
@@ -598,6 +600,4 @@
 5-1 [德国外交政治家谈中国挑战：不签投资协议，北京一样能活下去](/articles/dw/1042701.md)
 
 5-1 [游客不能来！荷兰郁金香花海开了个寂寞](/articles/dw/1042702.md)
-
-5-1 [快餐店玩具收藏吉尼斯世界纪录保持人](/articles/dw/1042703.md)
 
