--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+5-19 [德国家庭部长因论文造假嫌疑请辞](/articles/dw/1042397.md)
+
+5-19 [纽约检方对特朗普集团展开刑事调查](/articles/dw/1042398.md)
+
+5-19 [墨西哥总统首度就屠杀华人惨案公开道歉](/articles/dw/1042399.md)
+
 5-19 [巴以冲突，中国到底站哪边?](/articles/dw/1042400.md)
 
 5-19 [特斯拉进入危机模式？马斯克继续冒险？](/articles/dw/1042401.md)
@@ -594,10 +600,4 @@
 5-1 [美国防部长：下一场重大战争将 “非常不同”](/articles/dw/1042695.md)
 
 5-1 [印度疫情屡创新高 祸不单行疫苗告罄](/articles/dw/1042696.md)
-
-5-1 [德国政治家谈中国挑战：不签投资协议，北京一样能活下去](/articles/dw/1042697.md)
-
-5-1 [五月树——德国式浪漫](/articles/dw/1042698.md)
-
-5-1 [大国梦魇：德国还有哪些“第三帝国”建筑](/articles/dw/1042699.md)
 
