--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,18 @@
 法广
 ------
 
+5-19 [纽约司法欲追究特朗普集团犯罪](/articles/rfi/1029595.md)
+
+5-19 [白宫印太事务官：目前美国没有扩大四国机制计划](/articles/rfi/1029596.md)
+
+5-19 [印度COVID-19新增病例减缓 4529人病殁创新高 – 法国国际广播电台 - RFI](/articles/rfi/1029597.md)
+
+5-19 [欧洲议会周四将就冻结中欧投资协定进行投票](/articles/rfi/1029598.md)
+
+5-19 [拜登普京峰会今先铺路 显有缓解姿态](/articles/rfi/1029599.md)
+
+5-19 [比特币利空罩顶 跌破4万美元 – 法国国际广播电台 - RFI](/articles/rfi/1029600.md)
+
 5-19 [中国网络主播帐号1.3亿！](/articles/rfi/1029601.md)
 
 5-19 [中国军企：拜登延后两周生效特朗普投资禁令](/articles/rfi/1029602.md)
@@ -588,16 +600,4 @@
 5-14 [随美股涨势走高 港股收红 – 法国国际广播电台 - RFI](/articles/rfi/1029893.md)
 
 5-14 [哥伦比亚执法人员对示威者动武遭谴责 外长下台 – 法国国际广播电台 - RFI](/articles/rfi/1029894.md)
-
-5-14 [六人行团聚特别篇5月27日开播 客串嘉宾有BTS、女神卡卡 – 法国国际广播电台 - RFI](/articles/rfi/1029895.md)
-
-5-14 [亚股普遍上扬 收复本周部分失土 – 法国国际广播电台 - RFI](/articles/rfi/1029896.md)
-
-5-14 [担心巴以冲突失控 安理会周日开会讨论 - 要闻解说](/articles/rfi/1029897.md)
-
-5-14 [缅甸撤告 释放日籍记者北角裕树 – 法国国际广播电台 - RFI](/articles/rfi/1029898.md)
-
-5-14 [台北市舞厅酒吧夜店三温暖等八大行业明起停业期阻断传播链](/articles/rfi/1029899.md)
-
-5-14 [中国数字巨头受到政府掌控 - 法国报纸摘要](/articles/rfi/1029900.md)
 
