--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-19 [一场引发朝韩两国抗议的艺术展](/articles/nyt/1046848.md)
+
 5-19 [斯里兰卡移民在日本拘禁所死亡，引发社会反思](/articles/nyt/1046849.md)
 
 5-19 [巴以冲突加剧加沙地区人道主义危机](/articles/nyt/1046850.md)
@@ -598,6 +600,4 @@
 2-26 [蔚来汽车会成为汽车行业的未来吗？](/articles/nyt/1047146.md)
 
 2-26 [简报：中国再批两种新冠疫苗注册申请；脸书封禁缅甸军方](/articles/nyt/1047147.md)
-
-2-25 [中国全职太太离婚获5万元补偿引热议](/articles/nyt/1047148.md)
 
