--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,14 @@
 法广
 ------
 
+5-19 [路透社：G20支持新冠疫苗专利“自愿性授权” - 今日经济](/articles/rfi/1029591.md)
+
+5-19 [瑞媒：世界卫生组织决意进行根本性变革](/articles/rfi/1029592.md)
+
+5-19 [沙国外长对与伊朗试探性对话态度乐观 – 法国国际广播电台 - RFI](/articles/rfi/1029593.md)
+
+5-19 [日股收跌 – 法国国际广播电台 - RFI](/articles/rfi/1029594.md)
+
 5-19 [纽约司法欲追究特朗普集团犯罪](/articles/rfi/1029595.md)
 
 5-19 [白宫印太事务官：目前美国没有扩大四国机制计划](/articles/rfi/1029596.md)
@@ -592,12 +600,4 @@
 5-14 [Covid-19新冠病毒：美国科学家联署投书«科学»再提实验室事故假说](/articles/rfi/1029889.md)
 
 5-14 [以色列军队又否认进入加沙地面](/articles/rfi/1029890.md)
-
-5-14 [全球累计1亿6108万例COVID-19确诊 逾334万人不治 – 法国国际广播电台 - RFI](/articles/rfi/1029891.md)
-
-5-14 [以军轰炸地道网络 加沙死亡过百](/articles/rfi/1029892.md)
-
-5-14 [随美股涨势走高 港股收红 – 法国国际广播电台 - RFI](/articles/rfi/1029893.md)
-
-5-14 [哥伦比亚执法人员对示威者动武遭谴责 外长下台 – 法国国际广播电台 - RFI](/articles/rfi/1029894.md)
 
