--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-19 [习近平铁腕掌控 军队反腐风暴还在刮](/articles/voa/1040702.md)
+
 5-19 [美俄外长会谈 “考验两国能否建立更稳固的双边关系](/articles/voa/1040703.md)
 
 5-19 [拜登称不能让中国的电动汽车制造业超越美国 中国：别动不动拿中国说事](/articles/voa/1040704.md)
@@ -598,6 +600,4 @@
 5-6 [世界“顶回”中国--（1）欧洲对中国期待的幻灭](/articles/voa/1041000.md)
 
 5-6 [美两党参议员对国务院人权报告删除西藏是中国一部分的表述表示赞赏](/articles/voa/1041001.md)
-
-5-6 [以色列总统挑选内塔尼亚胡最强大的对手组建新政府](/articles/voa/1041002.md)
 
