--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+5-19 [印度变异病毒五月杀入中国   五名赴越中国专家接种疫苗亦中招](/articles/rfa/1045556.md)
+
+5-19 [台湾一边抗疫 一边打假讯息战役](/articles/rfa/1045557.md)
+
 5-19 [美国会聚焦新疆种族灭绝   商讨是否抵制北京冬奥](/articles/rfa/1045558.md)
 
 5-19 [中国四月份经济增速趋缓  失业率控制不如欧美？](/articles/rfa/1045559.md)
@@ -596,8 +600,4 @@
 4-16 [法国外长宣布参加“印太倡议”  与印、澳合作应对中国](/articles/rfa/1045854.md)
 
 4-16 [渗透恐吓又一桩！加拿大关注中国人权组织成员遭死亡威胁](/articles/rfa/1045855.md)
-
-4-15 [进口芯片短缺涨价潮蔓延 中国部分企业停工](/articles/rfa/1045856.md)
-
-4-15 [北京在港宣传“国安教育日”    文革气氛笼罩香港](/articles/rfa/1045857.md)
 
