--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+5-19 [美国国会通过打击反亚裔美国人仇恨犯罪法案](/articles/dw/1042393.md)
+
+5-19 [客座评论：调解以巴冲突，北京显中东野心](/articles/dw/1042394.md)
+
+5-19 [谁动了我的黄金？哥伦比亚“头痛“的中国投资人](/articles/dw/1042395.md)
+
 5-19 [金门县呼吁向中国大陆购买疫苗 陈时中：“很难啦”](/articles/dw/1042396.md)
 
 5-19 [德国家庭部长因论文造假嫌疑请辞](/articles/dw/1042397.md)
@@ -594,10 +600,4 @@
 5-1 [德语媒体: 习近平是台海局势的最大变数](/articles/dw/1042691.md)
 
 5-1 [台湾是“地球上最危险地区”？](/articles/dw/1042692.md)
-
-5-1 [基辛格警告：中美冷战将带来世界末日般威胁](/articles/dw/1042693.md)
-
-5-1 [美批中国未履行保护知识产权的承诺](/articles/dw/1042694.md)
-
-5-1 [美国防部长：下一场重大战争将 “非常不同”](/articles/dw/1042695.md)
 
