--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+5-19 [律师江天勇出狱逾两年仍未重获自由 河南公民往探望遭刑拘](/articles/rfa/1045554.md)
+
+5-19 [半年发生两起：内蒙古文旅厅副厅长自缢身亡](/articles/rfa/1045555.md)
+
 5-19 [印度变异病毒五月杀入中国   五名赴越中国专家接种疫苗亦中招](/articles/rfa/1045556.md)
 
 5-19 [台湾一边抗疫 一边打假讯息战役](/articles/rfa/1045557.md)
@@ -596,8 +600,4 @@
 4-16 [美呼吁加强美日韩三边联盟 日韩内部产生分歧](/articles/rfa/1045852.md)
 
 4-16 [香港民运人士周永康回应中国央视：指控是虚构故事](/articles/rfa/1045853.md)
-
-4-16 [法国外长宣布参加“印太倡议”  与印、澳合作应对中国](/articles/rfa/1045854.md)
-
-4-16 [渗透恐吓又一桩！加拿大关注中国人权组织成员遭死亡威胁](/articles/rfa/1045855.md)
 
